@@ -78,10 +78,10 @@ public class ValueChanger {
             newValue = Byte.valueOf((byte) (oldbyte + 1));
         } else if (oldValue instanceof Float) {
             float oldfloat = ((Float) oldValue).floatValue();
-            newValue = new Float((float) (oldfloat + 16.7));
+            newValue = Float.valueOf((float) (oldfloat + 16.7));
         } else if (oldValue instanceof Double) {
             double olddouble = ((Double) oldValue).doubleValue();
-            newValue = new Double(olddouble + 17.8);
+            newValue = Double.valueOf(olddouble + 17.8);
         } else if (oldValue instanceof String) {
             String oldString = (String) oldValue;
             newValue = oldString + "New";
@@ -1077,6 +1077,7 @@ public class ValueChanger {
         return result;
     }
 
+    @SuppressWarnings("unchecked")
     private static <T> T copyStruct(T value) {
         Class<T> clazz = (Class<T>) value.getClass();
         T newValue;
