@@ -210,11 +210,11 @@ public class MyPersistObject implements XPersistObject, XTypeProvider,
         if ( property.equals(props[1].Name))
             return Integer.valueOf(i);
         if ( property.equals(props[2].Name))
-            return new Character(c);
+            return Character.valueOf(c);
         if ( property.equals(props[3].Name))
-            return new Double(d);
+            return Double.valueOf(d);
         if ( property.equals(props[4].Name))
-            return new Float(f);
+            return Float.valueOf(f);
         if ( property.equals(props[5].Name))
             return Short.valueOf(s);
         if ( property.equals(props[6].Name))
